standaard waarde voor de plaatjes veranderd in toe.gif

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		function toonKaart(aantal){
 			for(i = 0; i < kaart.length; i++){
 				count++;
-				document.getElementById('container').innerHTML += "<img src='"+kaart[i]+"' id='"+kaart[i]+"' onclick='checkKaart(this.id)'>";
+				document.getElementById('container').innerHTML += "<img src='toe.gif' id='"+kaart[i]+"' onclick='checkKaart(this.id)'>";
 			}
 		}
 		
