--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
 		function toonKaart(aantal){
 			for(i = 0; i < kaart.length; i++){
 				count++;
-				document.getElementById('container').innerHTML += "<img src='toe.gif' id='"+kaart[i]+"' onclick='checkKaart(this.id)'>";
+				document.getElementById('container').innerHTML += "<img src='toe.gif' id='"+i+"' onclick='checkKaart(this)'>";
 			}
 		}
 		
-		function checkKaart(id){
-			var newId=id.substring(0,id.length-4);
+		function checkKaart(el){
+			draaiKaart(el);
+			var newId=el.id;
 			if(aantalGeklikt==0){
 				kaart1=newId;
 				document.getElementById("status").innerHTML="Klik op het tweede kaartje";
